--- a/css/content/authorization.css
+++ b/css/content/authorization.css
@@ -12,7 +12,7 @@
     width: 90%;
     margin: 15px auto;
 }
-.form_input input{
+.info_input{
     width: 100%;
     margin: 5px 0;
 }
@@ -26,10 +26,18 @@
     text-align: center;
     margin-bottom:  10px;
 }
-.h_aut{
-    text-align: center;
-    size: 20px;
+.confirmation{
+    display: flex;
+    padding: 3px;
+    border: 0;
 }
+.confirmation p{
+    margin-left: 5px;
+    font-size: 15px;
+    margin-top: 2px;
+    max-width: 100%;
+}
+
 
 .password {
 	position: relative;
