catalog ang location

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 @import 'basis/zeroing_out.css';
 @import 'basis/header_footer.css';
 @import 'content/authorization.css';
+@import 'content/catalog.css';
