--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,4 @@
 @import 'basis/header_footer.css';
 @import 'content/authorization.css';
 @import 'content/catalog.css';
+@import 'content/about.css';
